# SmartPointer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: main.cpp
src/module/: dummyLib.cpp  dummyLib.h  dynamicArray.h  fraction.h  pointer.h  timer.h
src/test/: dummy_PerformanceTest.cpp  dummy_Unittest.cpp  main.cpp
